# InvoiceExtractor

./: .gitignore  README.md  docker-compose.yml
AIEngine/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
AIEngine/app/: __init__.py  config.py  extractor.py  main.py  pdf_extractor.py  schemas.py
AIEngine/scripts/: make_sample_invoice.py
AIEngine/tests/: test_pdf_extractor.py
API/: .dockerignore  .gitignore  InvoiceExtractor.sln  README.md
API/InvoiceExtractor.Api/: Dockerfile  InvoiceExtractor.Api.csproj  Program.cs  appsettings.json
API/InvoiceExtractor.Api/Controllers/: InvoicesController.cs
API/InvoiceExtractor.Application/: DependencyInjection.cs  InvoiceExtractor.Application.csproj
API/InvoiceExtractor.Application/DTOs/: ExtractionResultDto.cs  InvoiceListItemDto.cs  InvoiceResponseDto.cs
API/InvoiceExtractor.Application/Exceptions/: AiEngineException.cs
API/InvoiceExtractor.Application/Interfaces/: IAiEngineClient.cs  IFileStorage.cs  IInvoiceRepository.cs
API/InvoiceExtractor.Application/Mapping/: InvoiceMapper.cs
API/InvoiceExtractor.Application/Validation/: InvoiceValidator.cs  ValidationResult.cs
API/InvoiceExtractor.Domain/Entities/: Invoice.cs  LineItem.cs
API/InvoiceExtractor.Domain/Enums/: .gitkeep
API/InvoiceExtractor.Infrastructure/: DependencyInjection.cs  InvoiceExtractor.Infrastructure.csproj
UI/: .dockerignore  .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
UI/src/: App.tsx  styles.css
UI/src/api/: client.ts  invoices.ts
(+19 files in other folders)
