[project]
name = "invoice-extractor-aiengine"
version = "0.1.0"
description = "Stateless FastAPI service: text-based PDF in, structured invoice JSON out."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pdfplumber>=0.11",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "fpdf2>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
